--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "sphinxs",
   "license": "",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
