--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
-    "mysql2": "^1.5.1"
+    "mysql2": "^1.5.1",
+    "yarn": "^1.3.2"
   }
 }
