--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "futiba"
   ],
   "author": "sphinxs",
-  "license": "",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
